--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,12 +17,23 @@ jobs:
       # Checkout the code as the first step.
       - checkout
 
-      # Install Java 11 and Maven
+      # Install Java 11 and Maven 3.9.6
       - run:
           name: "Install Java 11 and Maven"
           command: |
             sudo apt-get update
-            sudo apt-get install -y openjdk-11-jdk maven
+            sudo apt-get install -y openjdk-11-jdk wget
+
+            # Download and install Maven 3.9.6
+            wget https://archive.apache.org/dist/maven/maven-3/3.9.6/binaries/apache-maven-3.9.6-bin.tar.gz
+            sudo tar xzf apache-maven-3.9.6-bin.tar.gz -C /opt
+            sudo ln -s /opt/apache-maven-3.9.6 /opt/maven
+
+            # Set Maven environment variables
+            echo 'export M2_HOME=/opt/maven' >> $BASH_ENV
+            echo 'export PATH=$M2_HOME/bin:$PATH' >> $BASH_ENV
+            source $BASH_ENV
+
             java -version
             mvn -version
 
